--- a/pets.html
+++ b/pets.html
@@ -5,6 +5,8 @@
 	<meta content="utf-8" http-equiv="encoding">
 	<title>pet finder</title> 
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	</head>
 	<body >
 	<form>
@@ -21,10 +23,11 @@
 		
 		<select id='breeds'>
 		</select>
-		<div id ="imageList">
-		</div>
+		
 		
 	</form>
+	<div id ="imageList">
+	</div>
 		
 	<!--External Javascript files-->
 	<script type="text/javascript" src="js/global.js"></script>
