all selects working

--- a/pets.html
+++ b/pets.html
@@ -9,8 +9,9 @@
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	</head>
 	<body >
-	<form>
+	<form id='petForm'>
 		<select id='animals' >
+			<option value="" disabled="disabled" selected="selected">Please select animal</option>
 			<option>barnyard</option>
 			<option>bird</option>
 			<option>cat</option>
@@ -21,8 +22,10 @@
 			<option>smallfurry</option>
 		</select>
 		
-		<select id='breeds'>
-		</select>
+		<!--<input id='breed' list='breeds'>
+			<datalist id='breeds'>
+			</datalist>-->
+		
 		
 		
 	</form>
