--- a/pets.html
+++ b/pets.html
@@ -28,16 +28,25 @@
 		
 		
 	</form>
-	
+	<!--
 	<div id="bigImgContainer" >
 			<img  alt="pets!" onclick="doit(this)" id="big-pic" >
 			<div id="desc" >
 			</div>	
 	</div>
+	
+	-->
+	<dialog id="petDialog">
+		<img  alt="pets!" onclick="doit(this)" id="big-pic" >
+		<div id="desc" >
+		</div>
+	</dialog>
   
   <!--Thumbnail Strip-->
+  <div id="imageContainer" style="position:abosolute;width:auto;height:auto">
 	<div id="imageList">
 	</div>
+ </div>	
 	
 		
 	<!--External Javascript files-->
