--- a/pets.html
+++ b/pets.html
@@ -36,10 +36,13 @@
 					</li>
 					<li>
 						<button class="submit"  type="submit">Contact us</button> 
-					</li>		
+					</li>	
+                     					
 				</ul>
-			</form>			
+			</form>	
+        		
 		</div>	
+		 <b style="color:red;">Press 'esc' to exit</b>	
 		<div id="desc" >
 		</div>
 	</dialog>
